syntax = "proto2";

package asdc.proto;

message MobileAuthenticate {
  enum AuthenticateStatus {
    AUTHENTICATE_SUCCESS = 0;
    AUTHENTICATE_FAILURE = 1;
  }

  optional string username = 1;
  optional string salt = 2;
  optional string hash = 3;
  optional AuthenticateStatus auth_status = 4;
}
